fix: header z-index above all

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -131,6 +131,7 @@
     box-shadow: 0 2px 8px rgba(0 0 0 / 0.1);
     background-color: #fff;
     border-radius: 10px;
+    z-index: 1;
   }
 
   .header__menu-btn {
